@@ -27,7 +27,10 @@ cd "$srcdir"
 	DIE=1
 }
 
-if automake-1.9 --version < /dev/null > /dev/null 2>&1; then
+if automake-1.10 --version < /dev/null > /dev/null 2>&1; then
+    AUTOMAKE=automake-1.10
+    ACLOCAL=aclocal-1.10
+elif automake-1.9 --version < /dev/null > /dev/null 2>&1; then
     AUTOMAKE=automake-1.9
     ACLOCAL=aclocal-1.9
 elif automake-1.8 --version < /dev/null > /dev/null 2>&1; then
