@@ -1,5 +1,12 @@
 2007-08-11  Stefan Kost  <ensonic@users.sf.net>
 
+	patch by: David Nečas <yeti@physics.muni.cz>
+
+	* autogen.sh:
+	  Accepts automake 1.10 too. Fixes #459225
+
+2007-08-11  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-mkdb.in:
 	  Make the tmpl-less build work.
 
